// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title renders correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "creteround-regular",
        "marginBottom": 5,
      },
      Object {
        "fontSize": 18,
      },
      undefined,
    ]
  }
>
  I am a title
</Text>
`;

exports[`Title renders correctly at small size 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "creteround-regular",
        "marginBottom": 5,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
    ]
  }
>
  I am a sub-title
</Text>
`;
